--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,181 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* Define a custom thin and stylish scrollbar */
+.custom-scrollbar::-webkit-scrollbar {
+    width: 5px; 
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  /* Track */
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background: #f1f1f1;
   }
-  to {
-    transform: rotate(360deg);
+  
+  /* Handle */
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background: #888; 
+    border-radius: 4px;
   }
+  
+  /* Handle on hover */
+  .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
+/* ////////////////////////////////////////////////////////////////////////////////////////////////////////   */
+.Blur{
+    filter: blur(5px);  
+  }   
+.no-focus:focus {
+    outline: none;
+    box-shadow: none;
 }
+
+.sidebar {
+    /* border-left: 2px solid  var(--primary); */
+    position: fixed;
+    left: -500px; 
+    top: 0;
+    width: 470px;
+    height: 100vh;
+    transition: right 0.3s ease-in-out;
+    z-index: 9999;
+}
+.sidebar.open {
+    left: 0;
+}
+
+.sidebar-content {
+    padding: 0px;
+}
+
+.More {
+    /* border-left: 2px solid  var(--primary); */
+    position: fixed;
+    left: -300px;
+    top: 0;
+    width: 270px;
+    height: 100vh;
+    transition: right 0.3s ease-in-out;
+    z-index: 9999;
+}
+.More.open {
+    left: 0;
+}
+
+.More-content {
+    padding: 0px;
+    box-shadow: 0.1px 0.1px 2px;
+}
+.Appearance {
+    /* border-left: 2px solid  var(--primary); */
+    position: fixed;
+    left: -300px;
+    top: 30;
+    width: 270px;
+    height: 30vh;
+    transition: right 0.3s ease-in-out;
+    z-index: 9999;
+}
+.Appearance.open {
+    left: 0;
+}
+
+.Appearance-content {
+    padding: 0px;
+    box-shadow: 0.1px 0.1px 2px;
+}
+
+/* Responsive styles */
+@media screen and (max-width: 400px) {
+    .sidebar {
+        width: 100%;
+        height: auto;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .More {
+        width: 100%;
+        height: auto;
+    }
+}
+@media screen and (max-width: 400px) {
+    .Appearance {
+        width: 100%;
+        height: auto;
+    }
+}
+
+/* Define custom classes for height */
+.height-100vh{
+    height: 100vh;
+}
+.height-90vh{
+    height: 90vh;
+}
+.height-80vh{
+    height: 80vh;
+}
+.height-70vh{
+    height: 70vh;
+}
+.height-75vh{
+    height: 75vh;
+}
+.height-20vh {
+    height: 20%;
+}
+
+.height-30vh {
+    height: 30%;
+}
+
+.height-40vh {
+    height: 40%;
+}
+
+.height-50vh {
+    height: 50%;
+}
+.width-100vh{
+    width: 100vh;
+}
+.width-90vh{
+    width: 90vh;
+}
+.width-80vh{
+    width: 80vh;
+}
+.width-70vh{
+    width: 70vh;
+}
+.width-75vh{
+    width: 75vh;
+}
+
+/* Define custom classes for width */
+.width-20vh {
+    width: 20%;
+}
+.width-30vh {
+    width: 30%;
+}
+
+.width-50vh {
+    width: 50%;
+}
+
+.width-80vh {
+    width: 80%;
+}
+
+.width-75vh {
+    width: 75%;
+}
+
+.width-100 {
+    width: 100%;
+}
+@media (min-width: 768px) {
+    .height-md-100vh {
+      height: 100vh;
+    }
+  }
+  
