--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,11 @@
     height: 60px;
     width: 60px;
 }
+
+.dp-sm{
+    height: 25px;
+    width: 25px;
+}
 .dp-info{
     height: 40px;
     width: 40px;
